# Sync-VDC

./: .gitignore  README.md  find_usb_device.ps1
Sync VDC/: CMakeLists.txt
Sync VDC/include/: WT13106Connection.h
Sync VDC/src/: WT13106Connection.cpp  example_usage.cpp
src/: WT13106Connection.cpp  example_usage.cpp
